# nexus

./: .env.example  .gitignore  Caddyfile  README.md  SELF_HOSTING.md  compose.yaml
.github/workflows/: ci.yml
docs/: app.html  app.js  auth.js  login.html  login.js  styles.css
nexus/: .dockerignore  Dockerfile  LICENSE  NEXUS_AI_HANDOFF.md  README.md  install.sh  pyproject.toml  requirements.txt
nexus-pages/: README.md  login.html
nexus/osint_toolkit/: __init__.py  __main__.py  api.py  cli.py  correlate.py  http.py  models.py  render.py  tui.py
nexus/osint_toolkit/ai/: __init__.py  engine.py  performance.py  rag.py
nexus/osint_toolkit/ai/knowledge/: breach_analysis.md  identity_correlation.md  modules.md  osint.md  pentest_methodology.md  reporting.md  web_security.md
nexus/osint_toolkit/modules/: __init__.py  breach.py  crypto.py  discord.py  domain.py  email.py  github.py  image.py  ip.py  phone.py  social.py  username.py  web.py
nexus/osint_toolkit/pentest/: __init__.py  dirs.py  dns_sec.py  fingerprint.py  graphql.py  headers.py  js_recon.py  ports.py  s3.py  spring.py  ssl_audit.py  subdomains.py  web_audit.py  wordlists.py
nexus/scripts/: local_ai.sh
nexus/tests/: conftest.py  test_ai_engine.py  test_ai_evidence.py  test_ai_performance.py  test_api.py  test_chat_provider.py  test_correlate.py  test_discord.py  test_external_detection.py  test_headers.py  test_models.py  test_pentest_helpers.py  test_tui_chat_routing.py
nexus/training/: BASELINE.md  README.md  build_curriculum.py  eval_cases.json  evaluate_model.py  evaluate_rag.py  examples.jsonl  hardware_check.py  model_eval_cases.json  prepare_dataset.py  train_qlora.py
web/: README.md  app.html  app.js  index.html  login.html  login.js
