[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-toolkit"
version = "4.0.0"
description = "Nexus — OSINT + detection-only pentest + external tool wrappers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Nexus" }]
keywords = ["osint", "pentest", "recon", "security", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "textual>=0.70.0",
    "phonenumbers>=8.13.0",
    "holehe>=1.61",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tldextract>=5.0.0",
    "python-whois>=0.9.0",
    "dnspython>=2.6.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",       # httpx mocking for offline tests
    "ruff>=0.5",
]
train = [
    "accelerate>=1.0",
    "datasets>=3.0",
    "peft>=0.13",
    "safetensors>=0.4",
    "transformers>=4.45",
    "trl>=0.11",
    "bitsandbytes>=0.45; platform_system == 'Linux'",
]
[project.urls]
Homepage = "https://github.com/dontleteuwatchyou/nexus"
Documentation = "https://github.com/dontleteuwatchyou/nexus/tree/main/nexus"

# Both entry points map to the same CLI; `nexus` is canonical, `osint`
# is kept for backward compatibility with earlier versions.
[project.scripts]
nexus = "osint_toolkit.cli:main"
osint = "osint_toolkit.cli:main"

[tool.setuptools.packages.find]
include = ["osint_toolkit*"]

[tool.setuptools.package-data]
osint_toolkit = ["ai/knowledge/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# NOTE: re-add `asyncio_mode = "auto"` here once async tests are added
# (requires the pytest-asyncio plugin from the [dev] extra).

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Sensible default rule set; the codebase favours readability over dogma.
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # long lines tolerated (tables, signatures)
